# Daily-Task-Notifier

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/: mainwindow.h  task.h  taskManager.h
src/: main.cpp  mainwindow.cpp  mainwindow.ui  task.cpp  taskManager.cpp
